# frank

./: .buildinfo  .coverage  .gitignore  AUTHORS.rst  HISTORY.rst  MANIFEST.in  README.md  README.rst  default_parameters.json  genindex.html  index.html  install.html  mstable_to_uvtable.html  objects.inv  parameter_descriptions.json  py_API.html  quickstart.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  tutorials.html
.circleci/: config.yml
_sources/: index.rst.txt  install.rst.txt  quickstart.rst.txt  tutorials.rst.txt
coverage/: .gitignore  d_271e390af77d1723___init___py.html  d_271e390af77d1723_constants_py.html  d_271e390af77d1723_debris_fitters_py.html  d_271e390af77d1723_filter_py.html  d_271e390af77d1723_fit_py.html  d_271e390af77d1723_geometry_py.html  d_271e390af77d1723_hankel_py.html  d_271e390af77d1723_io_py.html  d_271e390af77d1723_make_figs_py.html  d_271e390af77d1723_minimizer_py.html  d_271e390af77d1723_plot_py.html  d_271e390af77d1723_radial_fitters_py.html  d_271e390af77d1723_statistical_models_py.html  d_271e390af77d1723_tests_py.html  d_271e390af77d1723_utilities_py.html  frank___init___py.html  frank_constants_py.html  frank_fit_py.html  frank_geometry_py.html  frank_hankel_py.html  frank_io_py.html  frank_make_figs_py.html  frank_plot_py.html  frank_radial_fitters_py.html  frank_tests_py.html  frank_utilities_py.html  index.html  status.json
docs/: Makefile  code_versions.rst  conf.py  index.rst  install.rst  mstable_to_uvtable.rst  py_API.rst  py_API.rst~  quickstart.rst  tutorial_link.rst  tutorials.rst
examples/: Frankenstein.ipynb
frank/: __init__.py  constants.py  debris_fitters.py  default_parameters.json  filter.py  fit.py  fourier2d.py  frank.mplstyle  geometry.py  hankel.py  io.py  make_figs.py  minimizer.py  parameter_descriptions.json  plot.py  radial_fitters.py  statistical_models.py  test_temp.py.ipynb  tests.py  (+4 more)
frank.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+82 files in other folders)
