# to set version dynamically: https://github.com/pypa/setuptools/issues/1724#issuecomment-627241822

[metadata]
name = frank
version = attr: frank.__version__
author = Richard Booth, Jeff Jennings, Marco Tazzari
author_email = jjennings1519@gmail.com
description = Frankenstein, the flux reconstructor
long_description = file: README.md
long_description_content_type = text/markdown
license = LGPLv3
license_file = LICENSE.txt
include_package_data = True
url = https://github.com/discsim/frank
project_urls =
    Bug Tracker = https://github.com/discsim/frank/issues
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords =
    science
    astronomy
    interferometry

[options]
packages = frank

# python_requires docs: https://packaging.python.org/guides/distributing-packages-using-setuptools/#python-requires
python_requires = >=3.6

# PEP 440 - pinning package versions: https://www.python.org/dev/peps/pep-0440/#compatible-release
install_requires =
    numpy>=1.12
    matplotlib>=3.1.0
    scipy>=0.18.0

# extras_require syntax:
# https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html?highlight=options.extras_require#configuring-setup-using-setup-cfg-files
[options.extras_require]
test = pytest
       coverage
       coverage-badge>=1.1.0

docs-build = sphinx
             sphinxcontrib-fulltoc
             sphinx_rtd_theme
             nbsphinx
             jupyter_client
             ipykernel
